@@ -1320,7 +1320,7 @@ static FUNCTION(fun_etimefmt)
                 width = 11;
             }
         }
-            
+
         // Handle modifiers
         //
         bool bDoSuffix = false;
@@ -1541,8 +1541,8 @@ static FUNCTION(fun_etimefmt)
     safe_str(p, buff, bufc);
 }
 
+#if defined(FIRANMUX)
 
-#ifdef FIRANMUX
 /*
  * ---------------------------------------------------------------------------
  * * fun_format: format a string (linewrap) with str, field, left, right
@@ -1670,6 +1670,8 @@ FUNCTION(fun_text)
     safe_str("#-1 FILE NOT LISTED",buff,bufc);
 }
 
+#if 0
+
 /*
  * ---------------------------------------------------------------------------
  * * successes: return the number of successes/botches from a bunch of
@@ -1761,6 +1763,279 @@ FUNCTION(fun_successes)
         safe_ltoa(successes, buff, bufc);
     }
 }
+
+#else
+
+// fun_successes
+//
+
+#define MAXDICE 11
+#define MAXDIFF 10
+#define MAXBOUND 14
+
+typedef struct dice_node
+{
+    short maxsuccs;
+    short bound[MAXBOUND];
+} dice_node;
+
+static const dice_node dice_table[MAXDICE][MAXDIFF] =
+{
+    {   // Dice 1                                      // Difficulty
+        {  2, { 444, 842, 977, 998, 1000, -1 } },      //  1
+        {  2, { 359, 783, 963, 997, 1000, -1 } },      //  2
+        {  2, { 282, 717, 946, 995, 1000, -1 } },      //  3
+        {  2, { 215, 643, 923, 993, 1000, -1 } },      //  4
+        {  2, { 156, 562, 896, 989, 1000, -1 } },      //  5
+        {  2, { 108, 476, 861, 984, 999, 1000, -1 } }, //  6
+        {  2, {  68, 385, 820, 977, 999, 1000, -1 } }, //  7
+        {  2, {  39, 293, 770, 968, 998, 1000, -1 } }, //  8
+        {  2, {  18, 199, 711, 955, 997, 1000, -1 } }, //  9
+        {  2, {   5, 108, 642, 939, 996, 1000, -1 } }  // 10
+    },
+    {   // Dice 2                                           // Difficulty
+        {  3, { 347, 755, 947, 994, 1000, -1 } },           //  1
+        {  3, { 253, 658, 910, 987, 999, 1000, -1 } },      //  2
+        {  3, { 178, 555, 861, 977, 998, 1000, -1 } },      //  3
+        {  3, { 119, 451, 798, 962, 997, 1000, -1 } },      //  4
+        {  3, {  74, 350, 721, 940, 994, 1000, -1 } },      //  5
+        {  3, {  43, 255, 630, 910, 990, 1000, -1 } },      //  6
+        {  3, {  22, 171, 526, 871, 984, 999, 1000, -1 } }, //  7
+        {  3, {  10, 101, 411, 819, 975, 999, 1000, -1 } }, //  8
+        {  3, {   3,  49, 287, 753, 962, 998, 1000, -1 } }, //  9
+        {  2, {  15, 159, 670, 944, 997, 1000, -1 } }       // 10
+    },
+    {   // Dice 3                                                // Difficulty
+        {  4, { 271, 665, 905, 983, 998, 1000, -1 } },           //  1
+        {  4, { 178, 539, 836, 964, 995, 1000, -1 } },           //  2
+        {  4, { 112, 415, 747, 934, 990, 999, 1000, -1 } },      //  3
+        {  4, {  66, 302, 643, 888, 981, 998, 1000, -1 } },      //  4
+        {  4, {  35, 205, 526, 825, 966, 997, 1000, -1 } },      //  5
+        {  4, {  17, 128, 405, 742, 942, 994, 1000, -1 } },      //  6
+        {  4, {   7,  70, 286, 638, 907, 989, 1000, -1 } },      //  7
+        {  4, {   2,  32, 178, 512, 857, 981, 999, 1000, -1 } }, //  8
+        {  4, {   1,  11,  90, 367, 789, 968, 998, 1000, -1 } }, //  9
+        {  3, {   2,  29, 207, 696, 949, 997, 1000, -1 } }       // 10
+    },
+    {   // Dice 4                                                     // Difficulty
+        {  5, { 212, 579, 853, 966, 995, 1000, -1 } },                //  1
+        {  5, { 126, 432, 748, 926, 986, 998, 1000, -1 } },           //  2
+        {  5, {  70, 302, 624, 864, 969, 996, 1000, -1 } },           //  3
+        {  5, {  36, 196, 490, 778, 939, 991, 999, 1000, -1 } },      //  4
+        {  5, {  17, 116, 358, 669, 892, 980, 998, 1000, -1 } },      //  5
+        {  5, {   7,  61, 239, 540, 822, 963, 996, 1000, -1 } },      //  6
+        {  5, {   2,  28, 140, 400, 725, 934, 992, 1000, -1 } },      //  7
+        {  5, {   1,  10,  68, 261, 597, 888, 986, 999, 1000, -1 } }, //  8
+        {  4, {   2,  24, 137, 439, 819, 974, 999, 1000, -1 } },      //  9
+        {  3, {   4,  46, 254, 720, 954, 997, 1000, -1 } }            // 10
+    },
+    {   // Dice 5                                                     // Difficulty
+        {  6, { 165, 499, 793, 941, 989, 999, 1000, -1 } },           //  1
+        {  6, {  89, 342, 655, 874, 969, 995, 999, 1000, -1 } },      //  2
+        {  6, {  44, 216, 505, 775, 930, 986, 998, 1000, -1 } },      //  3
+        {  6, {  20, 125, 359, 649, 867, 968, 995, 1000, -1 } },      //  4
+        {  6, {   8,  64, 232, 506, 775, 934, 989, 999, 1000, -1 } }, //  5
+        {  6, {   3,  29, 132, 359, 653, 878, 976, 998, 1000, -1 } }, //  6
+        {  6, {   1,  11,  64, 224, 505, 793, 953, 995, 1000, -1 } }, //  7
+        {  5, {   3,  24, 116, 344, 669, 912, 989, 999, 1000, -1 } }, //  8
+        {  4, {   6,  44, 189, 504, 846, 978, 999, 1000, -1 } },      //  9
+        {  4, {   1,   8,  65, 298, 742, 958, 997, 1000, -1 } }       // 10
+    },
+    {   // Dice 6                                                          // Difficulty
+        {  7, { 129, 426, 728, 909, 978, 996, 1000, -1 } },                //  1
+        {  7, {  63, 267, 563, 809, 941, 987, 998, 1000, -1 } },           //  2
+        {  7, {  28, 152, 398, 675, 873, 965, 994, 999, 1000, -1 } },      //  3
+        {  7, {  11,  78, 254, 519, 770, 923, 983, 998, 1000, -1 } },      //  4
+        {  7, {   4,  35, 144, 362, 634, 851, 960, 994, 999, 1000, -1 } }, //  5
+        {  7, {   1,  13,  70, 223, 477, 743, 918, 985, 999, 1000, -1 } }, //  6
+        {  6, {   4,  28, 116, 315, 598, 844, 966, 996, 1000, -1 } },      //  7
+        {  6, {   1,   8,  47, 172, 424, 729, 931, 992, 1000, -1 } },      //  8
+        {  5, {   1,  13,  69, 243, 563, 868, 981, 999, 1000, -1 } },      //  9
+        {  4, {   1,  14,  87, 340, 763, 961, 998, 1000, -1 } }            // 10
+    },
+    {   // Dice 7                                                          // Difficulty
+        {  8, { 101, 361, 662, 869, 963, 992, 999, 1000, -1 } },           //  1
+        {  8, {  44, 207, 475, 736, 902, 973, 995, 999, 1000, -1 } },      //  2
+        {  8, {  17, 106, 307, 572, 799, 931, 983, 997, 1000, -1 } },      //  3
+        {  8, {   6,  48, 175, 401, 658, 854, 956, 991, 999, 1000, -1 } }, //  4
+        {  8, {   2,  19,  87, 248, 492, 737, 903, 976, 996, 1000, -1 } }, //  5
+        {  7, {   6,  36, 131, 324, 583, 813, 944, 990, 999, 1000, -1 } }, //  6
+        {  7, {   1,  12,  56, 180, 407, 678, 884, 976, 998, 1000, -1 } }, //  7
+        {  6, {   3,  18,  78, 235, 500, 779, 946, 994, 1000, -1 } },      //  8
+        {  5, {   3,  22,  98, 298, 615, 888, 984, 999, 1000, -1 } },      //  9
+        {  4, {   3,  21, 111, 380, 782, 965, 998, 1000, -1 } }            // 10
+    },
+    {   // Dice 8                                                               // Difficulty
+        {  9, {  79, 304, 596, 824, 943, 986, 997, 1000, -1 } },                //  1
+        {  9, {  31, 159, 396, 659, 853, 952, 989, 998, 1000, -1 } },           //  2
+        {  9, {  11,  73, 232, 473, 715, 882, 964, 992, 999, 1000, -1 } },      //  3
+        {  9, {   3,  29, 118, 300, 543, 766, 911, 975, 995, 999, 1000, -1 } }, //  4
+        {  9, {   1,  10,  51, 164, 364, 609, 816, 938, 986, 998, 1000, -1 } }, //  5
+        {  8, {   3,  18,  74, 209, 428, 675, 866, 963, 994, 999, 1000, -1 } }, //  6
+        {  7, {   5,  26,  97, 254, 495, 745, 914, 983, 998, 1000, -1 } },      //  7
+        {  7, {   1,   6,  33, 117, 300, 569, 821, 958, 995, 1000, -1 } },      //  8
+        {  6, {   1,   7,  35, 132, 352, 662, 904, 987, 999, 1000, -1 } },      //  9
+        {  4, {   4,  29, 137, 419, 799, 968, 998, 1000, -1 } }                 // 10
+    },
+    {   // Dice 9                                                               // Difficulty
+        { 10, {  62, 255, 532, 774, 917, 977, 995, 999, 1000, -1 } },           //  1
+        { 10, {  22, 121, 326, 582, 796, 923, 978, 995, 999, 1000, -1 } },      //  2
+        { 10, {   7,  50, 173, 384, 625, 820, 933, 982, 996, 999, 1000, -1 } }, //  3
+        { 10, {   2,  18,  78, 219, 434, 666, 846, 946, 986, 998, 1000, -1 } }, //  4
+        {  9, {   5,  29, 105, 259, 481, 708, 874, 961, 992, 999, 1000, -1 } }, //  5
+        {  9, {   1,   9,  40, 128, 296, 527, 751, 904, 975, 996, 1000, -1 } }, //  6
+        {  8, {   2,  12,  49, 147, 332, 575, 799, 936, 988, 999, 1000, -1 } }, //  7
+        {  7, {   2,  13,  53, 162, 367, 631, 855, 967, 996, 1000, -1 } },      //  8
+        {  6, {   2,  11,  52, 170, 405, 703, 918, 989, 999, 1000, -1 } },      //  9
+        {  5, {   1,   7,  40, 164, 455, 815, 971, 998, 1000, -1 } }            // 10
+    },
+    {   // Dice 10                                                                   // Difficulty
+        { 11, {  48, 213, 472, 721, 886, 963, 991, 998, 1000, -1 } },                //  1
+        { 11, {  15,  92, 266, 506, 733, 885, 962, 990, 998, 1000, -1 } },           //  2
+        { 11, {   4,  34, 127, 306, 536, 748, 891, 964, 991, 998, 1000, -1 } },      //  3
+        { 11, {   1,  11,  51, 156, 338, 562, 766, 901, 969, 993, 999, 1000, -1 } }, //  4
+        { 10, {   3,  17,  65, 178, 365, 589, 787, 915, 975, 995, 999, 1000, -1 } }, //  5
+        {  9, {   4,  21,  75, 195, 389, 617, 813, 933, 984, 998, 1000, -1 } },      //  6
+        {  9, {   1,   5,  24,  81, 207, 411, 648, 844, 953, 991, 999, 1000, -1 } }, //  7
+        {  8, {   1,   5,  23,  80, 213, 432, 687, 882, 974, 997, 1000, -1 } },      //  8
+        {  6, {   3,  18,  72, 210, 456, 740, 931, 991, 1000, -1 } },                //  9
+        {  5, {   1,  10,  51, 191, 489, 830, 974, 998, 1000, -1 } }                 // 10
+    },
+    {   // Dice 11                                                                        // Difficulty
+        { 12, {  38, 177, 415, 667, 850, 946, 985, 997, 999, -1 } },                      //  1
+        { 12, {  11,  69, 214, 435, 666, 840, 939, 982, 996, 999, 1000, -1 } },           //  2
+        { 12, {   3,  23,  93, 239, 450, 669, 838, 937, 981, 996, 999, 1000, -1 } },      //  3
+        { 12, {   1,   6,  33, 109, 256, 462, 675, 841, 939, 982, 996, 999, 1000, -1 } }, //  4
+        { 11, {   1,   9,  40, 119, 267, 471, 683, 848, 944, 985, 997, 1000, -1 } },      //  5
+        { 10, {   2,  11,  43, 123, 273, 480, 695, 861, 953, 989, 998, 1000, -1 } },      //  6
+        {  9, {   2,  11,  42, 122, 273, 487, 711, 879, 965, 994, 999, 1000, -1 } },      //  7
+        {  8, {   2,   9,  37, 113, 267, 495, 735, 905, 980, 998, 1000, -1 } },           //  8
+        {  7, {   1,   6,  28,  96, 252, 505, 773, 941, 992, 1000, -1 } },                //  9
+        {  5, {   2,  14,  65, 220, 521, 844, 976, 999, 1000, -1 } },                     // 10
+    }
+};
+
+#define DIE_TO_ROLL 1000
+#define OLDSUCC_DIE_TO_ROLL 10
+#define NUMBER_TOO_LARGE -200
+
+/*
+ * Roll a 10-sided die. If it's equal to or higher than the difficulty,
+ * return true.
+ */
+static int simple_success(int diff)
+{
+    int rand = RandomINT32(1, OLDSUCC_DIE_TO_ROLL);
+    return rand >= diff;
+}
+
+/* The lookup function: Given a table in the form of table[dice][diff]
+   and a given number this function returns the number of successes
+   corresponding to that number in the table.
+   If the number is larger than the largest boundary, it will return
+   NUMBER_TOO_LARGE.
+*/
+static int lookup_succ_table(const dice_node *row, int *psucc)
+{
+    int randnum = RandomINT32(0, DIE_TO_ROLL-1);
+    int succs = row->maxsuccs;
+    for (int i = 0; i < MAXBOUND && 0 < row->bound[i]; i++)
+    {
+        if (randnum < row->bound[i])
+        {
+            *psucc = succs;
+            return 0;
+        }
+        succs--;
+    }
+    return NUMBER_TOO_LARGE;
+}
+
+/* A simple function to trigger the lookup: Translates the dice, diff
+   and random number into an entry point for the table and retrieves
+   the appropriate number of successes.
+   If the request is for a result outside of the table, use the following
+   simple algorithm:
+   Get the result from this algorithm with MAXDICE, then, for every die
+   over the max, roll one die. If it's over the diff, add a success.
+   If the diff is higher than MAXDIFF, return 0 successes.
+*/
+static int getsuccs(int dice, int diff, int *psucc)
+{
+    if (dice <= 0)
+    {
+        *psucc = 0;
+        return 0;
+    }
+
+    if (diff <= 0)
+    {
+        *psucc = dice;
+        return 0;
+    }
+    else if (MAXDIFF < diff)
+    {
+        *psucc = 0;
+        return 0;
+    }
+
+    int extra_successes = 0;
+    if (MAXDICE < dice)
+    {
+        for (int i = MAXDICE; i < dice; i++)
+        {
+            if (simple_success(diff))
+            {
+                extra_successes++;
+            }
+        }
+        dice = MAXDICE;
+    }
+
+    int succs;
+    const dice_node *node = &dice_table[dice-1][diff-1];
+    int err = lookup_succ_table(node, &succs);
+    if (0 == err)
+    {
+        *psucc = succs + extra_successes;
+    }
+    return err;
+}
+
+/* The MUX-style function */
+
+FUNCTION(fun_successes)
+{
+    // Number of dice and difficulty.
+    //
+    if (  !is_integer(fargs[0], NULL)
+       || !is_integer(fargs[1], NULL))
+    {
+        safe_str("#-1 ARGUMENTS MUST BE INTEGERS", buff, bufc);
+        return;
+    }
+
+    int num_dice   = mux_atol(fargs[0]);
+    int difficulty = mux_atol(fargs[1]);
+
+    int successes;
+    switch (getsuccs(num_dice, difficulty, &successes))
+    {
+    case 0:
+        safe_tprintf_str(buff, bufc, "%d", successes);
+        break;
+
+    case NUMBER_TOO_LARGE:
+        safe_str("#-1 INVALID SUCCESS TABLE", buff, bufc);
+        break;
+
+    default:
+        safe_str("#-1 UNKNOWN ERROR", buff, bufc);
+        break;
+    }
+}
+
+#endif
 
 #endif // FIRANMUX
 
@@ -6553,7 +6828,7 @@ static void filter_handler(char *buff, char **bufc, dbref executor, dbref enacto
                 AttrTrace(aflags, EV_STRIP_CURLY|EV_FCHECK|EV_EVAL), &str,
                 filter_args, filter_nargs);
             *bp = '\0';
-    
+
             if (  (  bBool
                   && xlate(result))
                || (  !bBool
@@ -8620,7 +8895,7 @@ static void GeneralTimeConversion
         *p++ = '\0';
         return;
     }
-         
+
     for (int i = iStartBase; i <= iEndBase; i++)
     {
         if (reTable[i].iBase <= Seconds || i == iEndBase)
